--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,22 +21,26 @@
 			</div-->
 			<div class="clear"></div>
 		</div>
-		<div class="cssmenu">
-			<ul>
+	<div class="cssmenu">
+		<ul id="menu1">
 				<% if user_signed_in? %>
 					<% if !current_user.profile_detail.nil? %>
 						<% @profile_id = ProfileDetail.find_by_user_id(current_user.id) %>
+						<li > <%= link_to "Account Setting", edit_profile_detail_path(@profile_id)%>
 						<li><%= link_to "Profile", edit_profile_detail_path(@profile_id)%>
-							<!--ul>
-								<li><%= link_to "Change Password", edit_user_registration_path%></li> |
-							</ul-->
+							<ul>
+							<li id='sub'><%= link_to 'Change password', edit_user_registration_path, :class => 'navbar-link' %> 
+							    </li> 
+							</ul>
 						</li> |
 					<%else%>
-						<li><%= link_to "Profile", new_profile_detail_path%>        
-							<!--ul>
-								<li><%= link_to "Change Password", edit_user_registration_path%></li>
-							</ul-->
+					<li><%= link_to "Account Setting", new_profile_detail_path%>
+							<ul>
+							<li id='sub'><%= link_to 'Change password', edit_user_registration_path, :class => 'navbar-link' %> 
+							    </li> 
+							</ul>
 						</li> |
+						
 					<%end%>
 					<% if User.find_role?(current_user) == "A"%>
 						<li><%= link_to "Users", users_path %> </li> |
@@ -78,7 +82,9 @@
 			<div class="menu">
 						<ul class="megamenu skyblue">
 		<li class="active grid"><a href="/home/index">Home</a></li>
+		<% if !user_signed_in? %>
 		<li><%= link_to "Seller Signup",new_user_registration_path(:retailer=>"Retailer"), :class=>"grey"%></li>
+		<%end%>
 		<% if current_user && User.find_role?(current_user) == "B"%>
 			<%if params[:controller] == "product_items" && params[:action] == "index"%>
 				<li><%= link_to "Products", product_items_path, :class => "color4" %> 
