--- a/app/views/orders/approve_order.html.erb
+++ b/app/views/orders/approve_order.html.erb
@@ -2,6 +2,7 @@
 	Sorry!! No Products Found
 <% else %>
 <div class="wrap">
+<div style="padding-left:20px;">
 	<table class="table table-striped">
 		<thead>
 			<tr>
@@ -10,28 +11,53 @@
 				<th>Product  Name</th>
 				<th>Price</th>
 				<th>Confirmed</th>
-				<th>Action</th>
 			</tr>
 		</thead>
 		<tbody>
 		<% @order && @order.each do |f|%>
+		<tr>
+		
 			<%f.product_ids.each do |k|%>
-			<% product_item = find_product_item(k)%>
-				<tr>
+				<% product_item = find_product_item(k)%>
+				
+				
 				<%if product_item.user_id == current_user.id %>
 					<td><%= f.cart.user.name%></td>
 					<td><%= ProductItem.find(k).user.name%></td>
 					<td><%= product_item.title %></td>
 					<td><%= product_item.price %></td>
-					<td>
-				<!--= link_to t('.destroy', :default => t("helpers.links.destroy")),user_path(user),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %-->
-					</td>
-				<%end%>
-				</tr>
-			<% end %>
-			<% end %>
-		</tbody>
+					
+
+				<td> <%= f.retailer_approve == true ?  "Confirmed" : "Not Approved"%></td>
+
+					</tr>
+					
+
+					</tbody>
 	</table>
+	</div>
+			<div style="float:right;margin-top:-141px;">
+				<table class="table table-striped" >
+		<thead>
+			<tr>
+				<th>Action</th>
+			</tr>
+		</thead>
+		<tbody>
+
+				<tr style="float:right;width:100px;">
+						<td>
+						<%= button_to "Approve", approve_and_reject_retailer_product_order_path(:id=>f,:approval=>"Yes"), data: { confirm: "Are you sure?" }, :class => 'btn btn-mini btn-danger' %>
+						<%= button_to "Reject", approve_and_reject_retailer_product_order_path(:id=>f,:approval=>"No"), data: { confirm: "Are you sure?" }, :class => 'btn btn-mini btn-danger' %>
+						</td>
+				</tr>
+			</div>
+								</tbody>
+																<%end%>
+																			<% end %>
+	</table>
+			<% end %>
+
 <% end %>
 </div>
 
