--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,12 +1,23 @@
-<h2>Resend confirmation instructions</h2>
-
+<div class="register_account">
+	<div class="wrap">
+		<div>
+		</div>
+		<h4 class="title">Resend confirmation instructions</h4>
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+			<%= devise_error_messages! %>
+			<div class="col_1_of_2 span_1_of_2">
+				<div>
+					<label for="modlgn_username">Email</label>
+					<input type="text" name="user[email]" placeholder="Email" class="inputbox">
+				</div>
+	
+				<div style="margin-top:25px;">
+					<%= f.button "Resend confirmation instructions", :class=>"grey" %>
+				</div>
+				</div>
+			</div>
+		<% end %>
+		<div class="clear"></div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
-
-  <div><%= f.submit "Resend confirmation instructions" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+	</div>
+</div>
