--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,37 +26,31 @@
 				<% if user_signed_in? %>
 					<% if !current_user.profile_detail.nil? %>
 						<% @profile_id = ProfileDetail.find_by_user_id(current_user.id) %>
-						<li > <%= link_to "Account Setting", edit_profile_detail_path(@profile_id)%>
-						<li><%= link_to "Profile", edit_profile_detail_path(@profile_id)%>
+						 <li><a class="color5" href="#">Account Settings</a> 
 							<ul>
-							<li id='sub'><%= link_to 'Change password', edit_user_registration_path, :class => 'navbar-link' %> 
-							    </li> 
-							</ul>
+								<li id='sub'><%= link_to "Profile", new_profile_detail_path%>
+								<%= link_to 'Change password', edit_user_registration_path, :class => 'navbar-link' %></li>
+							</ul> 
 						</li> |
+						
 					<%else%>
 					<li><%= link_to "Account Setting", new_profile_detail_path%>
 							<ul>
-							<li id='sub'><%= link_to 'Change password', edit_user_registration_path, :class => 'navbar-link' %> 
+							<li id='sub'><%= link_to "Profile", edit_profile_detail_path(@profile_id)%>
+							<%= link_to 'Change password', edit_user_registration_path, :class => 'navbar-link' %> 
 							    </li> 
 							</ul>
 						</li> |
 						
 					<%end%>
-					<% if User.find_role?(current_user) == "A"%>
-						<li><%= link_to "Users", users_path %> </li> |
-						<!--li><!--%= link_to "Retailers", retailer_requests_admins_path %--> 
-							<!--ul>
-								<li><a href="/admins/retailer_requests">User  Request</a></li>
-								<li><a href="/admins/product_approval">Product Approval</a></li>
-							</ul-->
-						</li> 
-						<li><%= link_to "Products", product_items_path %> 
-							<!--ul>
-								<li><a href="/product_categories">Categories</a></li>
-								<li><a href="/product_brands">Brands</a></li>
-								<li><a href="/admins/assign">Assign</a></li>
-							</ul-->
-						</li> |
+					<%if User.find_role?(current_user) == "A"%>
+							 <li><a href="#">Retailer</a> 
+							 <ul>
+								<li><a href="/admins/retailer_requests">User  Request</a>
+									<a href="/admins/product_approval">Product Approval</a></li>		 
+							 </ul> 
+					 </li> |
+
 					<% elsif User.find_role?(current_user) == "B"%>	
 						<li><%= link_to "Manage Products", product_items_path %> </li> |
 						<li><%= link_to "Shop", "/home/index" %> </li> |
@@ -88,6 +82,7 @@
 		<% if current_user && User.find_role?(current_user) == "B"%>
 			<%if params[:controller] == "product_items" && params[:action] == "index"%>
 				<li><%= link_to "Products", product_items_path, :class => "color4" %> 
+				
 				<li><a class="color6" href="/orders/approve_order">Approve Order</a></li>
 				<li><a class="color6" href="other.html">History</a></li>
 			<% end %>
@@ -98,19 +93,8 @@
 		<%end%>
 		<% if current_user && User.find_role?(current_user) == "A"%>
 		<li><a class="color6" href="/orders/approve_order">Approve Order</a></li>
-			<li><a class="color5" href="#">Retailer</a>
-			<div class="megapanel">
-				<div class="col1">
-						<div class="h_nav">
-							<h4>Retailer Request</h4>
-							<ul>
-								<li><a href="/admins/retailer_requests">User  Request</a></li>
-								<li><a href="/admins/product_approval">Product Approval</a></li>
-							</ul>	
-						</div>							
-					</div>
-				</div>
-			</li>
+			<li><%= link_to "Users", users_path, :class=>"color6"%></li>
+				<li><%= link_to "Products", product_items_path %> </li> 
 		<%end%>
 		</ul>
 		</div>
