--- a/app/views/notifier/retailer_request.html.erb
+++ b/app/views/notifier/retailer_request.html.erb
@@ -1,13 +1,16 @@
 <p>Dear Admin,</p>
 
 <p>You have a new retailer Request</p>
+=====================================================
 <p><b>Retailer Details</b></p>
+=====================================================
 <p><b>Retailer Name: </b><%=@user.name%></p>
 <p><b>Retailser Gender: </b><%=@user.profile_detail.gender%></p>
 <p><b>Retailer Description: </b><%=@user.desc%></p>
 <p><b>Retailer Contact: </b><%=@user.profile_detail.contact_no%></p>
 
-<p><%= link_to 'Click here', root_path %> to confirm retailer</p>
+<p>Please Login, to confirm Retailer</p>
+=====================================================
 
 <p>Regards,</p>
 <p>Smartek Ecommerce Team</p>
