--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,17 @@
 <%- model_class = User -%>
-
+<div class="wrap">
+<div>
+	<select id="myselect">
+		<option value="">Select</option>
+		<option value="ADMIN">ADMIN</option>
+		<option value="CUSTOMER">CUSTOMER</option>
+		<option value="RETAILER">RETAILER</option>
+	</select>
+</div>
 <% if !@users.present? %>
 	Sorry!! No Users Found
 <% else %>
-<div class="wrap">
+
 	<table class="table table-striped">
 		<thead>
 			<tr>
@@ -12,7 +20,6 @@
 				<th><%= model_class.human_attribute_name(:email) %></th>
 				<th><%= model_class.human_attribute_name(:role_type) %></th>
 				<th>Description</th>
-				<th>Confirmed</th>
 				<th><%=t '.actions', :default => t("helpers.actions") %></th>
 			</tr>
 		</thead>
@@ -24,7 +31,6 @@
 					<td><%= user.email %></td>
 					<td><%= user.role_type %></td>
 					<td><%= user.desc %></td>
-					<td><%= user.confirmed_at %></td>
 					<td>
 				<%= link_to t('.destroy', :default => t("helpers.links.destroy")),user_path(user),:method => :delete,:data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },:class => 'btn btn-mini btn-danger' %>
 					</td>
@@ -38,3 +44,9 @@
 <!--%= link_to t('.new', :default => t("helpers.links.new")),new_user_path,:class => 'btn btn-primary' %-->
 
 
+<script type="text/javascript">
+    $("select").change(function(){
+      var role_type = $(this).val();
+			window.location.href = 'http://localhost:3000/admins/get_role_type?role='+role_type;
+    });
+</script>
