--- a/app/assets/stylesheets/leoshop-css/megamenu.css
+++ b/app/assets/stylesheets/leoshop-css/megamenu.css
@@ -1,4 +1,13 @@
-.megamenu{margin-bottom:0px;padding:0;width:100%;list-style:none;display:inline-block;position:relative;font-size:15px}
+.megamenu {
+    display: inline-block;
+    font-size: 15px;
+    list-style: none outside none;
+    margin-bottom: 0;
+    margin-left: 174px;
+    margin-top: -66px;
+    position: absolute;
+}
+
 .megamenu li{margin-bottom:0px;display:inline}
 .megamenu>li>a{float:left;padding:8px 15px;text-decoration:none;text-transform:uppercase;font-size:1em; -webkit-transition: all 0.3s ease-in-out;
 	-moz-transition: all 0.3s ease-in-out;
